fix: resolve TypeScript module resolution issues
- Add comprehensive type declarations for @/config and @/libs/stripe
- Update tsconfig.json with proper module resolution settings
- Add temporary ts-ignore comments for import statements

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "isolatedModules": true,
     "noImplicitAny": true,
     "jsx": "preserve",
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
     },
@@ -25,6 +26,14 @@
     ],
     "strictNullChecks": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "types/**/*.d.ts",
+    "config.ts",
+    "libs/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
