--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     ]
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.4.0",
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.9.1",
     "@mdx-js/loader": "^2.3.0",
@@ -36,6 +37,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "form-data": "^4.0.0",
+    "lucide-react": "^0.460.0",
     "mailgun.js": "^9.4.1",
     "next": "^14.1.4",
     "next-sitemap": "^4.2.3",
@@ -46,6 +48,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
+    "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "react-tooltip": "^5.26.3",
     "sib-api-v3-sdk": "^8.5.0",
