--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,9 @@ STRIPE_WEBHOOK_SECRET=
 # OpenAI Configuration
 # -----------------------------------------------------------------------------
 OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o-mini-2024-07-18
+
+# -----------------------------------------------------------------------------
+# Application Configuration
+# -----------------------------------------------------------------------------
+PUBLIC_APP_URL=http://localhost:3000
