--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "form-data": "^4.0.0",
     "lucide-react": "^0.460.0",
     "mailgun.js": "^9.4.1",
+    "nanoid": "^5.0.8",
     "next": "^14.1.4",
     "next-sitemap": "^4.2.3",
     "nextjs-toploader": "^1.6.11",
