--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
     "@types/react-syntax-highlighter": "^15.5.11",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.10.1",
     "husky": "^9.1.7",
