feat(insights): implement report generation and improve insights page
- Add async report generation with Supabase Edge Functions
- Improve type safety and rendering logic in insights page
- Add database migrations for report tracking
- Update seed data for testing
- Add type guards for category-specific data
- Implement email capture modal for report delivery
- Clean up unused routes and improve error handling
- Fix husky and lint-staged configuration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,12 @@
     "node": true,
     "es6": true
   },
+  "ignorePatterns": [
+    "node_modules/",
+    "dist/",
+    "build/",
+    "supabase/functions/**/*.ts"
+  ],
   "rules": {
     "no-unused-vars": "warn",
     "react/no-unescaped-entities": "off"
